# stockdataqueue

./: CMakeLists.txt  main.cpp  stock_insert.cpp
include/: StockManager.hpp
src/: StockManager.cpp
